click between the axes apparently solved, probably they are aligned with che butto for poses preview

--- a/res/app.css
+++ b/res/app.css
@@ -348,7 +348,7 @@ button {
   display: flex;
   top:100px;
   width: 100%;
-  left:250px;
+  left:177px;
 }
 
 .selectContainer {
@@ -614,9 +614,9 @@ border: none;
   background-color: transparent;
   width: 438px;
   height: 438px;
-  left: 100px;
+  left: 90px;
   z-index: 100;
-  filter:Alpha(opacity=0);
+  pointer-events: none;
   
 }
 @media screen and (max-width: 600px){
@@ -635,6 +635,7 @@ border: none;
   position: relative;
   top: 55%;
   left:60px;
+  pointer-events: auto;
 }
 
 #idSliderLens {
@@ -653,6 +654,7 @@ border: none;
   );
   border: 0.5px solid #d9d9d9cc;
   transition: background 450ms ease-in;
+  pointer-events: auto;
 }
 
 .xAxis {
@@ -754,7 +756,7 @@ border: none;
   border: none;
   z-index: 100;
   margin-left: 30px;
-  left: 80px;
+  left: 60px;
   bottom: 0px
 }
 
